[project]
name = "fast-dllm"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
"transformers==4.49.0",
"lm_eval==0.4.8",
"accelerate==0.34.2",
"antlr4-python3-runtime==4.11",
"math_verify",
"sympy",
"hf_xet",
"pydantic==2.10.6",
"gradio"
]

[tool.setuptools.packages.find]
include = ["src"]

[tool.uv]
package = true
python-preference = "managed"

[tool.uv.sources]
torchvision = { index = "pytorch-cu118" }
torch = { index = "pytorch-cu118" }

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
addopts = "-s"


[tool.ruff]
line-length = 120

[tool.ruff.lint.extend-per-file-ignores]
# Also ignore `E402` in all `__init__.py` files.
"__init__.py" = ["E402", "F401", "F403", "E501"]

[tool.ruff.lint]
extend-select = ["UP"]
ignore = [
    "F722"
]
